# ILLBackend

./: .env.example  .gitignore  Cargo.toml  README.md
ill-backend-api/: Cargo.toml
ill-backend-api/src/: lib.rs  state.rs
ill-backend-api/src/routes/: health.rs
ill-backend-core/: Cargo.toml
ill-backend-core/src/: lib.rs
ill-backend-domain/: Cargo.toml
ill-backend-domain/src/session/: mod.rs  repo.rs
ill-backend-domain/src/user/: mod.rs  repo.rs
ill-backend-repo/: Cargo.toml
ill-backend-repo/migrations/: 0001_create_user.up.sql  0002_create_sessions.down.sql  0002_create_sessions.up.sql
ill-backend-repo/src/: lib.rs  manager.rs
ill-backend-repo/src/repos/: session.rs  user.rs
src/: main.rs
