[package]
name = "ill-backend"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "ill-backend-core",
    "ill-backend-api"
]

[lints.clippy]
pedantic = "deny"
unwrap_used = "deny"
missing_errors_doc = "allow"

[lints.rust]
unsafe_code = "forbid"

[profile.release]
opt-level = 3
strip = "symbols"
lto = true

[dependencies]
tokio = "1.37.0"
ill-backend-core = { path = "./ill-backend-core" }
