[package]
name = "ill-backend-api"
version = "0.1.0"
edition = "2021"

[lints.clippy]
pedantic = "deny"
unwrap_used = "deny"
missing_errors_doc = "allow"
module_name_repetitions = "allow"

[lints.rust]
unsafe_code = "forbid"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }
tracing = { version = "0.1.40", features = ["log"] }
