[package]
name = "ill-backend-repo"
version = "0.1.0"
edition = "2021"

[lints.clippy]
pedantic = "deny"
unwrap_used = "deny"
missing_errors_doc = "allow"
module_name_repetitions = "allow"

[lints.rust]
unsafe_code = "forbid"

[dependencies]
sqlx = { version = "0.7.4", features = ["uuid", "time", "runtime-tokio-rustls", "runtime-tokio", "tls-rustls", "postgres"] }
ill-backend-domain = { path = "../ill-backend-domain" }
async-trait = "0.1.79"
anyhow = "1.0.81"
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "serde"] }
